picogym/writeup/generalSkills/fixme2.txt
Title: fixme2.py
_____

Description:
Fix the syntax error in the Python script to print the flag.
https://artifacts.picoctf.net/c/67/fixme2.py

_____

Solution:

note: fix the operator

(kali㉿kali)-[~/ctf/Pico-CTF/picogym]
└─$ python fixme2.py 
  File "/home/kali/ctf/Pico-CTF/picogym/fixme2.py", line 22
    if flag = "":
       ^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
                                                                                             
┌──(kali㉿kali)-[~/ctf/Pico-CTF/picogym]
└─$ vim fixme2.py 
                                                                                             
┌──(kali㉿kali)-[~/ctf/Pico-CTF/picogym]
└─$ python fixme2.py
That is correct! Here's your flag: picoCTF{3qu4l1ty_n0t_4551gnm3nt_f6a5aefc}

